--- a/contacts.html
+++ b/contacts.html
@@ -196,7 +196,7 @@
       <div class="navbar">
         <h1 class="logo">R<span>OOP</span>T<span>ECH</span></h1>
         <ul>
-          <li><a href="home.html"> Home </a></li>
+          <li><a href="index.html"> Home </a></li>
           <li><a href="products.html"> Products </a></li>
           <li><a href="people.html"> People </a></li>
           <li><a href="contacts.html" class="bg-contact"> Contact </a></li>
