--- a/products.html
+++ b/products.html
@@ -133,7 +133,7 @@
       <div class="navbar">
         <h1 class="logo">R<span>OOP</span>T<span>ECH</span></h1>
         <ul>
-          <li><a href="home.html"> Home </a></li>
+          <li><a href="index.html"> Home </a></li>
           <li><a href="products.html" class="bg-product"> Products </a></li>
           <li><a href="people.html"> People </a></li>
           <li><a href="contacts.html"> Contact </a></li>
